--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,122 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.navbar {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.link {
+  color: white;
+  margin-right: 10px;
+  list-style: none;
+  text-decoration: none;
+}
+
+.navbar-toggle {
+  display: none;
+}
+
+/* Hide the navbar links on smaller screens */
+@media screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+  .navbar-links {
+    display: none;
+  }
+  .navbar-links.visible {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 10px 0;
+  }
+  .navbar-links.visible > .link {
+    display: block;
+    padding: 10px;
+    color: white;
+  }
+  .navbar-brand {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 0 10px;
+  }
+
+  .navbar-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    padding: 5px;
+    display: block; /* Show the toggle button on smaller screens */
+  }
+
+  .navbar-toggle span {
+    display: block;
+    height: 2px;
+    width: 25px;
+    background-color: #fff;
+    margin: 5px 0 0 5px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header {
+  background-color: #333;
+  color: white;
+  padding: 1rem;
+}
+
+.main {
+  padding: 2rem;
+}
+
+.genres {
+  margin-bottom: 1rem;
+}
+
+.genres button {
+  margin-right: 1rem;
+  background-color: #f4f4f4;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.genres button.active {
+  background-color: #333;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.movie-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie {
+  border: 1px solid #ccc;
+  padding: 1rem;
+  text-align: left;
+}
+
+.movie h2 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.movie p {
+  margin: 0.5rem 0;
 }
