--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
-.App {
+.black-and-white {
   text-align: center;
+  background-color: #333;
+  color: #fff;
+}
+
+.color {
+  text-align: center;
+  background-color: #f4f4f4;
+  color: #000;
 }
 
 body {
@@ -10,7 +18,7 @@ body {
 
 .navbar {
   background-color: #333;
-  color: #fff;
+  color: white;
   padding: 10px;
   display: flex;
   justify-content: space-between;
