--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,9 @@ body {
 }
 
 .navbar {
+  background-color: #000;
   color: white;
-  padding: 10px;
+  padding: 20px;
   display: flex;
   justify-content: space-between;
 }
@@ -35,7 +36,6 @@ body {
 }
 
 .header {
-  color: white;
   padding: 1rem;
 }
 
