--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.black-and-white {
+.black {
   background-color: #000;
   color: #fff;
   text-align: center;
 }
 
-.color {
+.white {
   background-color: #f4f4f4;
   color: #000;
   text-align: center;
@@ -13,7 +13,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  box-sizing: border-box;
+  line-height: 1.5;
+  letter-spacing: 0.3px;
+  font-family: "Roboto", sans-serif;
 }
 
 .navbar {
