--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,13 @@ body {
   letter-spacing: 0.3px;
   font-family: "Roboto", sans-serif;
 }
+h2 {
+  font-size: 1.5rem;
+  margin: 0;
+}
+p {
+  font-size: 1.2rem;
+}
 
 .navbar {
   background-color: #000;
